aws/security/security-groups.json
{
    "ECSSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
            "GroupDescription": "Security group for Equity Shield API ECS service",
            "SecurityGroupIngress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "CidrIp": "0.0.0.0/0"
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "CidrIp": "0.0.0.0/0"
                }
            ],
            "SecurityGroupEgress": [
                {
                    "IpProtocol": "-1",
                    "FromPort": -1,
                    "ToPort": -1,
                    "CidrIp": "0.0.0.0/0"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "equity-shield-ecs-sg"
                }
            ]
        }
    },
    "RDSSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
            "GroupDescription": "Security group for Equity Shield RDS instance",
            "SecurityGroupIngress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 5432,
                    "ToPort": 5432,
                    "SourceSecurityGroupId": {"Ref": "ECSSecurityGroup"}
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "equity-shield-rds-sg"
                }
            ]
        }
    },
    "RedisSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
            "GroupDescription": "Security group for Equity Shield ElastiCache Redis",
            "SecurityGroupIngress": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 6379,
                    "ToPort": 6379,
                    "SourceSecurityGroupId": {"Ref": "ECSSecurityGroup"}
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "equity-shield-redis-sg"
                }
            ]
        }
    }
}
